update swagger and route signature
